--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="dark.css">
 
   </head>
   <body>
@@ -19,16 +20,16 @@
       class="jumbotron jumbotron-fluid"
     >
       <div class="container">
-        <h1 class="display-3">Fluid jumbo heading</h1>
-        <p class="lead">Jumbo helper text</p>
+        <h1 class="display-3">sane charmers</h1>
+        <p class="lead">we charm snakes & sleep, ofcourse.</p>
         <hr class="my-2" />
         <p>More info</p>
         <p class="lead">
           <a
             class="btn border-light text-white btn-lg"
-            href="Jumbo action link"
+            href="http://www.phrack.org/issues/7/3.html"
             role="button"
-            >Jumbo action name</a
+            >click me! ಠᴗಠ</a
           >
         </p>
       </div>
@@ -142,12 +143,11 @@
     >
       <div class="card footer-card mx-auto" >
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
+          <h5 class="card-title">will you buy me a cofee ?</h5>
           <p class="card-text">
-            With supporting text below as a natural lead-in to additional
-            content.
+            nah, thanks for considering. I don't.
           </p>
-          <a href="#" class="btn border-light text-white">Go somewhere</a>
+          <a href="https://www.google.com/" class="btn border-light text-white">Go somewhere</a>
         </div>
       </div>
       <div class="custom-shape-divider-bottom-1595361044">
@@ -166,6 +166,6 @@
     </div>
       <!--fontawesome-->
     <script src="https://kit.fontawesome.com/b010c7bf25.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="styles/dark.css">
+
   </body>
   </html>
